# math-expressions

./: Dockerfile  Dockerfile.koyeb  build.bash  docker-compose.yaml  justfile
backend/: .dockerignore  Dockerfile  Expr.g4  Expr.interp  ExprLexer.interp  ExprLexer.py  ExprLexer.tokens  ExprListener.py  ExprParser.py  ExprVisitor.py  Interpreter.py  main.py  pyproject.toml  server.py  single_server.py
frontend/: .dockerignore  Dockerfile  convert-icons.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: ExprEditor.jsx
frontend/lib/: exprLanguage.jsx
frontend/pages/: _app.js  _document.js  index.jsx
frontend/public/: manifest.json  sw.js
frontend/styles/: globals.css
